// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ResetStatusModal should match snapshot 1`] = `
<ConfirmModal
  cancelButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="No, keep it as \\"{status}\\""
      id="modal.manual_status.cancel_"
      values={
        Object {
          "status": "",
        }
      }
    />
  }
  checkboxText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Do not ask me again"
      id="modal.manual_status.ask"
    />
  }
  confirmButtonClass="btn btn-primary"
  confirmButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Yes, set my status to \\"{status}\\""
      id="modal.manual_status.button_online"
      values={
        Object {
          "status": "Online",
        }
      }
    />
  }
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Would you like to switch your status to \\"{status}\\"?"
      id="modal.manual_status.message_online"
      values={
        Object {
          "status": "Online",
        }
      }
    />
  }
  modalClass=""
  onCancel={[Function]}
  onConfirm={[Function]}
  show={false}
  showCheckbox={true}
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Your Status is Set to \\"{status}\\""
      id="modal.manual_status.title_"
      values={
        Object {
          "status": "",
        }
      }
    />
  }
/>
`;

exports[`components/ResetStatusModal should match snapshot, render modal for OOF status 1`] = `
<ConfirmModal
  cancelButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="No, keep it as \\"{status}\\""
      id="modal.manual_status.cancel_"
      values={
        Object {
          "status": "",
        }
      }
    />
  }
  checkboxText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Do not ask me again"
      id="modal.manual_status.ask"
    />
  }
  confirmButtonClass="btn btn-primary"
  confirmButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Yes, set my status to \\"{status}\\""
      id="modal.manual_status.button_online"
      values={
        Object {
          "status": "Online",
        }
      }
    />
  }
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Would you like to switch your status to \\"{status}\\" and disable Automatic Replies?"
      id="modal.manual_status.auto_responder.message_online"
      values={
        Object {
          "status": "Online",
        }
      }
    />
  }
  modalClass=""
  onCancel={[Function]}
  onConfirm={[Function]}
  show={false}
  showCheckbox={false}
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Your Status is Set to \\"{status}\\""
      id="modal.manual_status.title_"
      values={
        Object {
          "status": "",
        }
      }
    />
  }
/>
`;
